# src/main/java/com/orcamento/cadastrospec/controllers/ReceitasApiImpl.java
@@ -1,7 +1,7 @@
 package com.orcamento.cadastrospec.controllers;
 
 import com.orcamento.cadastrospec.ReceitasApi;
-import com.orcamento.cadastrospec.model.Receita;
+import com.orcamento.cadastrospec.model.ReceitaDTO;
 import com.orcamento.cadastrospec.model.ReceitasResponse;
 import com.orcamento.cadastrospec.service.ReceitaService;
 import lombok.RequiredArgsConstructor;
@@ -16,12 +16,12 @@ public class ReceitasApiImpl implements ReceitasApi {
     private final ReceitaService service;
 
     @Override
-    public ResponseEntity<Receita> addReceita(Receita receita) {
+    public ResponseEntity<ReceitaDTO> addReceita(ReceitaDTO receita) {
         return ResponseEntity.status(HttpStatus.CREATED).body(service.criarReceita(receita));
     }
 
     @Override
-    public ResponseEntity<Receita> atualizarReceita(String id, Receita receita) {
+    public ResponseEntity<ReceitaDTO> atualizarReceita(String id, ReceitaDTO receita) {
         return ResponseEntity.status(HttpStatus.ACCEPTED).body(service.atualizarReceita(id, receita));
     }
 
@@ -31,7 +31,7 @@ public class ReceitasApiImpl implements ReceitasApi {
     }
 
     @Override
-    public ResponseEntity<Receita> getReceita(String id) {
+    public ResponseEntity<ReceitaDTO> getReceita(String id) {
         return ResponseEntity.ok(service.buscarReceita(id));
     }
 
